app/stderr.log
Traceback (most recent call last):
  File "/home/rcprhkdi/rcpro.in/app/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'appdh.py')
  File "/home/rcprhkdi/virtualenv/rcpro.in/app/3.6/lib64/python3.6/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 684, in _load
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "appdh.py", line 1
    ***
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rcprhkdi/rcpro.in/app/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'appdh.py')
  File "/home/rcprhkdi/virtualenv/rcpro.in/app/3.6/lib64/python3.6/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 684, in _load
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "appdh.py", line 1
    ***
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rcprhkdi/rcpro.in/app/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'appdh.py')
  File "/home/rcprhkdi/virtualenv/rcpro.in/app/3.6/lib64/python3.6/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 684, in _load
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "appdh.py", line 1
    ***
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rcprhkdi/rcpro.in/app/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'appdh.py')
  File "/home/rcprhkdi/virtualenv/rcpro.in/app/3.6/lib64/python3.6/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 684, in _load
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "appdh.py", line 1
    ***
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rcprhkdi/rcpro.in/app/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'appdh.py')
  File "/home/rcprhkdi/virtualenv/rcpro.in/app/3.6/lib64/python3.6/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 684, in _load
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "appdh.py", line 1
    ***
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rcprhkdi/rcpro.in/app/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'appdh.py')
  File "/home/rcprhkdi/virtualenv/rcpro.in/app/3.6/lib64/python3.6/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 684, in _load
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "appdh.py", line 1
    ***
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rcprhkdi/rcpro.in/app/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'appdh.py')
  File "/home/rcprhkdi/virtualenv/rcpro.in/app/3.6/lib64/python3.6/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 684, in _load
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "appdh.py", line 1
    ***
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rcprhkdi/rcpro.in/app/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'appdh.py')
  File "/home/rcprhkdi/virtualenv/rcpro.in/app/3.6/lib64/python3.6/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 684, in _load
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "appdh.py", line 1
    ***
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rcprhkdi/rcpro.in/app/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'appdh.py')
  File "/home/rcprhkdi/virtualenv/rcpro.in/app/3.6/lib64/python3.6/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 684, in _load
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "appdh.py", line 1
    ***
     ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rcprhkdi/rcpro.in/app/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'appdh.py')
  File "/home/rcprhkdi/virtualenv/rcpro.in/app/3.6/lib64/python3.6/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 684, in _load
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "appdh.py", line 1
    ***
     ^
SyntaxError: invalid syntax
